Remove InmutableMap and guava dependency